--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 			<article class="card">
 				<h2 class="card__title">3 спринт: Когда опускаются руки</h2>
 				<figure class="card__image">
-					<figcaption class="card__label">&lt;frustrating&gt;</figcaption>
+					<figcaption class="card__label">&lt;concentration&gt;</figcaption>
 					<img
 						class="image image_filter-opacity"
 						src="./images/image-07.jpg"
